Web Inspector: Dark Mode: Increase contrast in the timeline tab in @media (prefers-contrast: more) and @media (prefers-color-scheme: dark) https://bugs.webkit.org/show_bug.cgi?id=271927
Reviewed by NOBODY (OOPS!).

Increase lightness of enabled timelines in TimelineOverview.css.
Creatе --timeline-text-color in TimelineRuler.css.
Lighten markers, labels, and dividers in TimelineRuler.css.

* Source/WebInspectorUI/UserInterface/Views/TimelineOverview.css:
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .navigation-bar.timelines .item.text.enabled-timelines):
* Source/WebInspectorUI/UserInterface/Views/TimelineRuler.css:
(.timeline-ruler):
(.timeline-ruler > .header > .divider > .label):
(.timeline-ruler > .markers > .marker.load-event):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .timeline-ruler):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .timeline-ruler > .markers > .marker.load-event):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .timeline-ruler > .markers > .marker.dom-content-event):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .timeline-ruler > .markers > .marker.timestamp):
(@media (prefers-color-scheme: dark) @media (prefers-contrast: more) .timeline-ruler > .header > .divider > .label):

--- a/Source/WebInspectorUI/UserInterface/Views/TimelineOverview.css
+++ b/Source/WebInspectorUI/UserInterface/Views/TimelineOverview.css
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2013-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2024 Frances Cornwall <frances_c@cox.net>.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -226,5 +227,11 @@ body.mac-platform.legacy .timeline-overview > .graphs-container {
 @media (prefers-color-scheme: dark) {
     .timeline-overview:not(.frames) > .graphs-container > .timeline-overview-graph:nth-child(even) {
         background: var(--background-color-alternate);
+    }
+
+    @media (prefers-contrast: more) {
+        .navigation-bar.timelines .item.text.enabled-timelines {
+            color: var(--timeline-text-color);
+        }
     }
 }
